refactor: 第二篇博文
second post about add pagination to archive page using MutationObserver.

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -8,12 +8,13 @@
 
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    <span id="htmer_time" style=""></span>
                     <br>
                     Powered by <a href="">William Blog</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=huxpro&repo=huxpro.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=tzuw&repo=tzuw.github.io&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
@@ -246,3 +247,48 @@
     _render();
 </script>
 {% endif %}
+
+<!-- 计算网站运行时间 -->
+<script language=JavaScript>
+function secondToDate(second) {
+ if (!second) {
+     return 0;
+ }
+
+ var time = new Array(0, 0, 0, 0, 0);
+
+ if (second >= 365 * 24 * 3600) {
+     time[0] = parseInt(second / (365 * 24 * 3600));
+     second %= 365 * 24 * 3600;
+ }
+
+ if (second >= 24 * 3600) {
+     time[1] = parseInt(second / (24 * 3600));
+     second %= 24 * 3600;
+ }
+
+ if (second >= 3600) {
+     time[2] = parseInt(second / 3600);
+     second %= 3600;
+ }
+
+ if (second >= 60) {
+     time[3] = parseInt(second / 60);
+     second %= 60;
+ }
+
+ if (second > 0) {
+     time[4] = second;
+ }
+ return time;
+}
+<!-- 动态显示网站运行时间 -->
+function setTime() {
+    var create_time = Math.round(new Date(Date.UTC(2020, 01, 08, 0, 0, 0)).getTime() / 1000);
+    var timestamp = Math.round((new Date().getTime() + 8 * 60 * 60 * 1000) / 1000);
+    currentTime = secondToDate((timestamp - create_time));
+    currentTimeHtml = '本站已运行' + currentTime[0] + '年' + currentTime[1] + '天' + currentTime[2] + '时' + currentTime[3] + '分' + currentTime[4] + '秒';
+    document.getElementById("htmer_time").innerHTML = currentTimeHtml;
+}
+setInterval(setTime, 1000);
+</script>
