--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -36,7 +36,7 @@
     <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/public/assets/img/favicon.ico">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/public/assets/img/sword.jpg">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
