--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -37,7 +37,7 @@
     </div>
     <!-- /.container -->
 </nav>
-<script>
+<script type="module">
     // Drop Bootstarp low-performance Navbar
     // Use customize navbar with high-quality material design animation
     // in high-perf jank-free CSS3 implementation
