--- a/src/public/assets/less/hux-blog.less
+++ b/src/public/assets/less/hux-blog.less
@@ -645,8 +645,8 @@ samp {
   > .post-meta {
     .serif;
     color: @gray;
-    font-size: 16px;
-    font-style: italic;
+    font-size: 14px;
+    //font-style: italic;
     margin-top: 0;
     > a {
       text-decoration: none;
@@ -670,7 +670,7 @@ samp {
       }
     }
     .post-meta {
-      font-size: 18px;
+      font-size: 14px;
     }
   }
 }
@@ -1038,7 +1038,7 @@ img::-moz-selection {
         }
       }
       .post-meta {
-        font-size: 18px;
+        font-size: 14px;
       }
     }
   }
