--- a/src/public/assets/less/hux-blog.less
+++ b/src/public/assets/less/hux-blog.less
@@ -1019,7 +1019,7 @@ img::-moz-selection {
       }
     }
     > .post-meta {
-      position: absolute;
+      //position: absolute;
       right: 5px;
       bottom: 0px;
       margin: 0px;
