--- a/src/_includes/short-about.html
+++ b/src/_includes/short-about.html
@@ -10,5 +10,6 @@
     {% endif %}
     <!-- SNS Link -->
     {% include sns-links.html %}
+    <p>文章{{ site.posts.size }}&nbsp;|&nbsp;分类{{ site.categories.size }}&nbsp;|&nbsp;标签{{ site.tags.size }}</p>
   </div>
 </section>
