--- a/src/public/assets/less/hux-blog.less
+++ b/src/public/assets/less/hux-blog.less
@@ -953,6 +953,7 @@ img::-moz-selection {
     &:hover,
     &:active,
     &.focus {
+      border: black solid;
       //background-color: #0085a1 !important;
     }
     &.focus{
