--- a/src/_includes/copyright.html
+++ b/src/_includes/copyright.html
@@ -3,7 +3,7 @@
     <p>
         <strong>版权声明</strong>：
         本文由 <a href="{{ site.url }}">{{ page.author }}</a> 在 {{ page.date | date:"%Y年%m月%d日" }}发表。
-        本文采用<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh" target="_blank">CC BY-NC-SA 4.0</a>许可协议，非商业转载请注明出处，不得用于商业目的。
+        大多是学习笔记和分享，才疏学浅，欢迎指正。本文采用<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh" target="_blank">CC BY-NC-SA 4.0</a>许可协议，非商业转载请注明出处，不得用于商业目的。
         <br>
         文章题目及链接：<a href="{{ page.url }}">《{{ page.title }}》</a>
     </p>
