--- a/src/public/assets/css/william-blog.css
+++ b/src/public/assets/css/william-blog.css
@@ -1,3 +1,8 @@
+/*!
+ * Williiam Blog v1.8.2 ()
+ * Copyright 2020 William <>
+ */
+
 @media (min-width: 1200px) {
   .post-container,
   .sidebar-container {
@@ -14,11 +19,11 @@
   font-size: 14px;
 }
 .sidebar-container h5 {
-  color: #cccccc;
+  color: #ccc;
   padding-bottom: 1em;
 }
 .sidebar-container h5 a {
-  color: #cccccc !important;
+  color: #ccc !important;
   text-decoration: none;
 }
 .sidebar-container a {
@@ -26,14 +31,14 @@
 }
 .sidebar-container a:hover,
 .sidebar-container a:active {
-  color: #0085a1 !important;
+  color: #0085A1 !important;
 }
 .sidebar-container .tags a {
   border-color: #bfbfbf;
 }
 .sidebar-container .tags a:hover,
 .sidebar-container .tags a:active {
-  border-color: #0085a1;
+  border-color: #0085A1;
 }
 .sidebar-container .short-about img {
   width: 80%;
@@ -122,7 +127,7 @@
   background-color: #F5F5F5;
 }
 .side-catalog .catalog-body .active a {
-  color: #0085a1!important;
+  color: #0085a1 !important;
 }
 @media (max-width: 1200px) {
   .side-catalog {
@@ -179,7 +184,7 @@
     Multi-line snackbar height: 80 dp
     Text: Roboto Regular 14 sp
     Action button: Roboto Medium 14 sp, all-caps text
-    Default background fill: #323232 100%
+    Default background fill: #323232 100%  
   */
     left: 0px;
     right: 0px;
@@ -207,10 +212,10 @@
   width: 160px;
   overflow: hidden;
   user-select: none;
-  color: #000000;
+  color: #000;
   text-transform: uppercase;
   border-radius: 3px;
-  outline-color: #cccccc;
+  outline-color: #ccc;
 }
 .paper-button:hover {
   cursor: pointer;
@@ -224,7 +229,7 @@
   height: 100%;
   /*font-family: 'Roboto';*/
   font-size: 1em;
-  color: #000000;
+  color: #000;
   text-transform: uppercase;
 }
 .paper-button.colored,
@@ -257,13 +262,13 @@ button.paper-button {
   /*font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;*/
   font-size: 1em;
   line-height: 25px;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 .paper-button input[type="submit"] {
-  outline-color: #cccccc;
+  outline-color: #ccc;
 }
 .paper-button.colored.raised-button input[type="submit"] {
-  color: #ffffff;
+  color: #fff;
 }
 /** Shadows **/
 .paper-shadow-animated.paper-shadow {
@@ -299,210 +304,204 @@ button.paper-button {
   margin: 16px;
   border-radius: 2px;
 }
-.highlight,
-pre.highlight {
-  background: #282c34;
-  color: #abb2bf;
-}
-.highlight pre {
-  background: #282c34;
-}
 .highlight .hll {
-  background: #282c34;
+  background-color: #ffffcc;
 }
 .highlight .c {
-  color: #5c6370;
+  color: #008800;
   font-style: italic;
 }
+/* Comment */
 .highlight .err {
-  color: #960050;
-  background-color: #1e0010;
+  color: #a61717;
+  background-color: #e3d2d2;
 }
-.language-coq .highlight .err {
-  background-color: transparent;
+/* Error */
+.highlight .k {
+  color: #000080;
+  font-weight: bold;
 }
-.highlight .k,
-.language-coq .highlight .err {
-  color: #c678dd;
-}
-.highlight .l {
-  color: #98c379;
-}
-.highlight .n {
-  color: #abb2bf;
-}
-.highlight .o {
-  color: #abb2bf;
-}
-.highlight .p {
-  color: #abb2bf;
-}
+/* Keyword */
 .highlight .cm {
-  color: #5c6370;
+  color: #008800;
   font-style: italic;
 }
+/* Comment.Multiline */
 .highlight .cp {
-  color: #5c6370;
-  font-style: italic;
+  color: #008080;
 }
+/* Comment.Preproc */
 .highlight .c1 {
-  color: #5c6370;
+  color: #008800;
   font-style: italic;
 }
+/* Comment.Single */
 .highlight .cs {
-  color: #5c6370;
-  font-style: italic;
+  color: #008800;
+  font-weight: bold;
 }
+/* Comment.Special */
+.highlight .gd {
+  color: #000000;
+  background-color: #ffdddd;
+}
+/* Generic.Deleted */
 .highlight .ge {
   font-style: italic;
 }
-.highlight .gs {
-  font-weight: 700;
+/* Generic.Emph */
+.highlight .gr {
+  color: #aa0000;
 }
-.highlight .kc {
-  color: #c678dd;
+/* Generic.Error */
+.highlight .gh {
+  color: #999999;
 }
-.highlight .kd {
-  color: #c678dd;
-}
-.highlight .kn {
-  color: #c678dd;
-}
-.highlight .kp {
-  color: #c678dd;
-}
-.highlight .kr {
-  color: #c678dd;
-}
-.highlight .kt {
-  color: #c678dd;
-}
-.highlight .ld {
-  color: #98c379;
-}
-.highlight .m {
-  color: #d19a66;
-}
-.highlight .s {
-  color: #98c379;
-}
-.highlight .na {
-  color: #d19a66;
-}
-.highlight .nb {
-  color: #e5c07b;
-}
-.highlight .nc {
-  color: #e5c07b;
-}
-.highlight .no {
-  color: #e5c07b;
-}
-.highlight .nd {
-  color: #e5c07b;
-}
-.highlight .ni {
-  color: #e5c07b;
-}
-.highlight .ne {
-  color: #e5c07b;
-}
-.highlight .nf {
-  color: #abb2bf;
-}
-.highlight .nl {
-  color: #e5c07b;
-}
-.highlight .nn {
-  color: #abb2bf;
-}
-.highlight .nx {
-  color: #abb2bf;
-}
-.highlight .py {
-  color: #e5c07b;
-}
-.highlight .nt {
-  color: #e06c75;
-}
-.highlight .nv {
-  color: #e5c07b;
-}
-.highlight .ow {
-  font-weight: 700;
-}
-.highlight .w {
-  color: #f8f8f2;
-}
-.highlight .mf {
-  color: #d19a66;
-}
-.highlight .mh {
-  color: #d19a66;
-}
-.highlight .mi {
-  color: #d19a66;
-}
-.highlight .mo {
-  color: #d19a66;
-}
-.highlight .sb {
-  color: #98c379;
-}
-.highlight .sc {
-  color: #98c379;
-}
-.highlight .sd {
-  color: #98c379;
-}
-.highlight .s2 {
-  color: #98c379;
-}
-.highlight .se {
-  color: #98c379;
-}
-.highlight .sh {
-  color: #98c379;
-}
-.highlight .si {
-  color: #98c379;
-}
-.highlight .sx {
-  color: #98c379;
-}
-.highlight .sr {
-  color: #56b6c2;
-}
-.highlight .s1 {
-  color: #98c379;
-}
-.highlight .ss {
-  color: #56b6c2;
-}
-.highlight .bp {
-  color: #e5c07b;
-}
-.highlight .vc {
-  color: #e5c07b;
-}
-.highlight .vg {
-  color: #e5c07b;
-}
-.highlight .vi {
-  color: #e06c75;
-}
-.highlight .il {
-  color: #d19a66;
-}
-.highlight .gu {
-  color: #75715e;
-}
-.highlight .gd {
-  color: #f92672;
-}
+/* Generic.Heading */
 .highlight .gi {
-  color: #a6e22e;
+  color: #000000;
+  background-color: #ddffdd;
 }
+/* Generic.Inserted */
+.highlight .go {
+  color: #888888;
+}
+/* Generic.Output */
+.highlight .gp {
+  color: #555555;
+}
+/* Generic.Prompt */
+.highlight .gs {
+  font-weight: bold;
+}
+/* Generic.Strong */
+.highlight .gu {
+  color: #aaaaaa;
+}
+/* Generic.Subheading */
+.highlight .gt {
+  color: #aa0000;
+}
+/* Generic.Traceback */
+.highlight .kc {
+  color: #000080;
+  font-weight: bold;
+}
+/* Keyword.Constant */
+.highlight .kd {
+  color: #000080;
+  font-weight: bold;
+}
+/* Keyword.Declaration */
+.highlight .kn {
+  color: #000080;
+  font-weight: bold;
+}
+/* Keyword.Namespace */
+.highlight .kp {
+  color: #000080;
+  font-weight: bold;
+}
+/* Keyword.Pseudo */
+.highlight .kr {
+  color: #000080;
+  font-weight: bold;
+}
+/* Keyword.Reserved */
+.highlight .kt {
+  color: #000080;
+  font-weight: bold;
+}
+/* Keyword.Type */
+.highlight .m {
+  color: #0000FF;
+}
+/* Literal.Number */
+.highlight .s {
+  color: #0000FF;
+}
+/* Literal.String */
+.highlight .na {
+  color: #FF0000;
+}
+/* Name.Attribute */
+.highlight .nt {
+  color: #000080;
+  font-weight: bold;
+}
+/* Name.Tag */
+.highlight .ow {
+  font-weight: bold;
+}
+/* Operator.Word */
+.highlight .w {
+  color: #bbbbbb;
+}
+/* Text.Whitespace */
+.highlight .mf {
+  color: #0000FF;
+}
+/* Literal.Number.Float */
+.highlight .mh {
+  color: #0000FF;
+}
+/* Literal.Number.Hex */
+.highlight .mi {
+  color: #0000FF;
+}
+/* Literal.Number.Integer */
+.highlight .mo {
+  color: #0000FF;
+}
+/* Literal.Number.Oct */
+.highlight .sb {
+  color: #0000FF;
+}
+/* Literal.String.Backtick */
+.highlight .sc {
+  color: #800080;
+}
+/* Literal.String.Char */
+.highlight .sd {
+  color: #0000FF;
+}
+/* Literal.String.Doc */
+.highlight .s2 {
+  color: #0000FF;
+}
+/* Literal.String.Double */
+.highlight .se {
+  color: #0000FF;
+}
+/* Literal.String.Escape */
+.highlight .sh {
+  color: #0000FF;
+}
+/* Literal.String.Heredoc */
+.highlight .si {
+  color: #0000FF;
+}
+/* Literal.String.Interpol */
+.highlight .sx {
+  color: #0000FF;
+}
+/* Literal.String.Other */
+.highlight .sr {
+  color: #0000FF;
+}
+/* Literal.String.Regex */
+.highlight .s1 {
+  color: #0000FF;
+}
+/* Literal.String.Single */
+.highlight .ss {
+  color: #0000FF;
+}
+/* Literal.String.Symbol */
+.highlight .il {
+  color: #0000FF;
+}
+/* Literal.Number.Integer.Long */
 .highlighter-rouge .highlight {
   margin-bottom: 10px;
   border-radius: 6px;
@@ -526,7 +525,7 @@ pre.highlight {
 }
 .highlighter-rouge .highlight .table-responsive {
   margin: 0px;
-  border: 0px;
+  border: 1px solid gray;
 }
 .highlighter-rouge .highlight .table {
   margin: 0px;
@@ -606,7 +605,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #0085A1;
 }
 a img:hover,
 a img:focus {
@@ -691,7 +690,7 @@ samp {
 }
 .post-container a:hover,
 .post-container a:focus {
-  color: #0085a1;
+  color: #0085A1;
 }
 .post-container h1,
 .post-container h2,
@@ -801,7 +800,7 @@ samp {
   width: 100%;
 }
 .post-container .pager li > a > span {
-  color: #cccccc;
+  color: #ccc;
   font-weight: normal;
   letter-spacing: 0.5px;
 }
@@ -955,14 +954,14 @@ samp {
 }
 .navbar-custom.invert .navbar-brand:hover,
 .navbar-custom.invert .navbar-brand:focus {
-  color: #0085a1;
+  color: #0085A1;
 }
 .navbar-custom.invert .nav li a {
   color: #404040;
 }
 .navbar-custom.invert .nav li a:hover,
 .navbar-custom.invert .nav li a:focus {
-  color: #0085a1;
+  color: #0085A1;
 }
 @media only screen and (min-width: 1170px) {
   .navbar-custom {
@@ -993,14 +992,14 @@ samp {
   }
   .navbar-custom.is-fixed .navbar-brand:hover,
   .navbar-custom.is-fixed .navbar-brand:focus {
-    color: #0085a1;
+    color: #0085A1;
   }
   .navbar-custom.is-fixed .nav li a {
     color: #404040;
   }
   .navbar-custom.is-fixed .nav li a:hover,
   .navbar-custom.is-fixed .nav li a:focus {
-    color: #0085a1;
+    color: #0085A1;
   }
   .navbar-custom.is-visible {
     /* if the user changes the scrolling direction, we show the header */
@@ -1013,7 +1012,7 @@ samp {
 }
 .intro-header {
   background: no-repeat center center;
-  background-color: #cccccc;
+  background-color: #ccc;
   background-attachment: scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -1170,7 +1169,7 @@ samp {
 .post-preview > a:hover,
 .post-preview > a:focus {
   text-decoration: none;
-  color: #0085a1;
+  color: #0085A1;
 }
 .post-preview > a > .post-title {
   font-size: 21px;
@@ -1187,8 +1186,8 @@ samp {
 }
 .post-preview > .post-meta {
   font-family: 'Lora', 'Times New Roman', serif;
-  color: #cccccc;
-  font-size: 16px;
+  color: #ccc;
+  font-size: 14px;
   margin-top: 0;
 }
 .post-preview > .post-meta > a {
@@ -1197,7 +1196,7 @@ samp {
 }
 .post-preview > .post-meta > a:hover,
 .post-preview > .post-meta > a:focus {
-  color: #0085a1;
+  color: #0085A1;
   text-decoration: underline;
 }
 @media only screen and (min-width: 768px) {
@@ -1219,7 +1218,7 @@ samp {
   color: #a3a3a3;
 }
 .post-content-preview:hover {
-  color: #0085a1;
+  color: #0085A1;
 }
 @media only screen and (min-width: 768px) {
   .post-content-preview {
@@ -1259,14 +1258,14 @@ footer .copyright a {
 }
 footer .copyright a:hover,
 footer .copyright a:focus {
-  color: #0085a1;
+  color: #0085A1;
 }
 .floating-label-form-group {
   font-size: 14px;
   position: relative;
   margin-bottom: 0;
   padding-bottom: 0.5em;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #eee;
 }
 .floating-label-form-group input,
 .floating-label-form-group textarea {
@@ -1288,7 +1287,7 @@ footer .copyright a:focus {
   top: 2em;
   margin: 0;
   font-size: 0.85em;
-  line-height: 1.764705882em;
+  line-height: 1.76470588em;
   vertical-align: middle;
   vertical-align: baseline;
   opacity: 0;
@@ -1299,17 +1298,17 @@ footer .copyright a:focus {
 }
 .floating-label-form-group::not(:first-child) {
   padding-left: 14px;
-  border-left: 1px solid #eeeeee;
+  border-left: 1px solid #eee;
 }
 .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #0085a1;
+  color: #0085A1;
 }
 form .row:first-child .floating-label-form-group {
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #eee;
 }
 .btn {
   /* Hux learn from
@@ -1331,8 +1330,8 @@ form .row:first-child .floating-label-form-group {
 }
 .btn-default:hover,
 .btn-default:focus {
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #0085A1;
+  border: 1px solid #0085A1;
   color: white;
 }
 .pager {
@@ -1368,8 +1367,8 @@ form .row:first-child .floating-label-form-group {
 .pager li > a:hover,
 .pager li > a:focus {
   color: white;
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #0085A1;
+  border: 1px solid #0085A1;
 }
 .pager li > a:hover > span,
 .pager li > a:focus > span {
@@ -1379,19 +1378,19 @@ form .row:first-child .floating-label-form-group {
 .pager .disabled > a:hover,
 .pager .disabled > a:focus,
 .pager .disabled > span {
-  color: #cccccc;
+  color: #ccc;
   background-color: #404040;
   cursor: not-allowed;
 }
 ::-moz-selection {
   color: white;
   text-shadow: none;
-  background: #0085a1;
+  background: #0085A1;
 }
 ::selection {
   color: white;
   text-shadow: none;
-  background: #0085a1;
+  background: #0085A1;
 }
 img::selection {
   color: white;
@@ -1418,7 +1417,7 @@ img::-moz-selection {
   border: 1px solid rgba(255, 255, 255, 0.8);
   border-radius: 999em;
   padding: 0 10px 0 10px;
-  /*color: #ffffff;*/
+  color: #ffffff;
   line-height: 24px;
   font-size: 12px;
   text-decoration: none;
@@ -1437,7 +1436,7 @@ img::-moz-selection {
 .tags .tag:active {
   color: white;
   border-color: white;
-  /*background-color: rgba(255, 255, 255, 0.4);*/
+  background-color: rgba(255, 255, 255, 0.4);
   text-decoration: none;
 }
 @media only screen and (min-width: 768px) {
@@ -1467,7 +1466,6 @@ img::-moz-selection {
   line-height: 28px;
   margin: 0 2px;
   margin-bottom: 8px;
-  /*background: #f3f5f5;*/
 }
 #tag_cloud a:hover,
 #tag_cloud .tag:hover,
@@ -1475,8 +1473,7 @@ img::-moz-selection {
 #tag_cloud .tag:active,
 #tag_cloud a.focus,
 #tag_cloud .tag.focus {
-  border: 2px black solid;
-  /*background-color: #0085a1 !important;*/
+  border: black solid;
 }
 #tag_cloud a.focus,
 #tag_cloud .tag.focus {
@@ -1485,20 +1482,11 @@ img::-moz-selection {
 #tag_cloud a.tag-button--all,
 #tag_cloud .tag.tag-button--all {
   font-weight: 700;
-  /*color: #0085a1!important;*/
-}
-#tag_cloud a.tag-button--all:hover,
-#tag_cloud .tag.tag-button--all:hover,
-#tag_cloud a.tag-button--all:active,
-#tag_cloud .tag.tag-button--all:active,
-#tag_cloud a.tag-button--all.focus,
-#tag_cloud .tag.tag-button--all.focus {
-  /*background-color: #e4e4e4 !important;*/
 }
 @media only screen and (min-width: 768px) {
   #tag_cloud {
-  margin-bottom: 25px;
-}
+    margin-bottom: 25px;
+  }
 }
 .tag-comments {
   font-size: 12px;
@@ -1548,7 +1536,6 @@ img::-moz-selection {
   font-size: 13px;
 }
 .mini-post-list .post-preview > .post-meta {
-  /*position: absolute;*/
   right: 5px;
   bottom: 0px;
   margin: 0px;
@@ -1638,7 +1625,7 @@ img::-moz-selection {
   box-shadow: none;
 }
 .comment #ds-thread #ds-reset .ds-post-button:hover {
-  background: #eeeeee;
+  background: #eee;
 }
 #ds-smilies-tooltip ul.ds-smilies-tabs li a {
   background: white !important;
@@ -1719,14 +1706,14 @@ img::-moz-selection {
   background-color: blanchedalmond;
 }
 .tag-4-little {
-  background-color: darkgray;
+  background-color: lightgray;
 }
 .tag-4-medium {
-  background-color: gray;
+  background-color: darkgray;
 }
 .tag-4-lots {
   background-color: lightslategray;
 }
 .tag-0-0 {
-  background-color: lightgray;
+  background-color: firebrick;
 }
