refactor: 修正markdown在index页面的显示
1. 2020/03/13 修正markdown在index页面的显示
2. 加入 istodo 变量

--- a/src/public/assets/less/william-blog.less
+++ b/src/public/assets/less/william-blog.less
@@ -678,14 +678,14 @@ samp {
 
 // Hux add home-page post-content-preview
 .post-content-preview {
-  font-size: 12px;
+  font-size: 10px;
   //font-style: italic;
   color: #a3a3a3;
   &:hover {
-    color: @brand-primary;
+    //color: @brand-primary;
   }
   @media only screen and (min-width: 768px) {
-    font-size: 12px;
+    font-size: 10px;
   }
 }
 
