[Update] footer.html => change username

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -10,11 +10,11 @@
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <span id="htmer_time" style=""></span>
                     <br>
-                    Powered by Huxpro, Jekyll, Maintained By <a href="">tzuw</a> |
+                    Powered by Huxpro, Jekyll, Maintained By <a href="">lin537x</a> |
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=tzuw&repo=tzuw.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=lin537x&repo=https://github.com/lin537x&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
