[Bugfix] _config.yml => wrong root path

--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="/blog/vendor.9ee51f46156dea4393fc.js"></script><script type="text/javascript" src="/blog/main.0a6f256f3cf60dcdae56.js"></script>
+<script type="text/javascript" src="/lin537xisme/vendor.9ee51f46156dea4393fc.js"></script><script type="text/javascript" src="/lin537xisme/main.12b98c722b978e2b1777.js"></script>
