--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -14,7 +14,7 @@
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="100px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=lin537x&repo=https://github.com/lin537x&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=lin537x&repo=lin537x.github.io&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
